2009-01-25  Claudio Saavedra  <csaavedra@igalia.com>

	* gtk/gtkiconview.c: More docstrings improvements
	regarding reorderable property.

2009-01-24  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 559420 – gtk_icon_view_enable_model_drag_[source|dest] docs
	wrt. reorderable property

	* gtk/gtkiconview.c: Improve docstrings regarding reorderable
        property. Based on a patch by Björn Lindqvist.

2009-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtktoolbutton.c (gtk_tool_button_activatable_reset):
	Fall back from stock ids to icon names like the old code 
	did. Patch by Tristan van Berkom.

2009-01-24  Matthias Clasen  <mclasen@redhat.com>

	* tests/testactions.c: Add a testcase for toolitems using
	icon names.

2009-01-24  Matthias Clasen  <mclasen@redhat.com>

	* gdk/x11/gdkcursor-x11.c (_gdk_x11_cursor_update_theme):
	Don't update blank cursors.

2009-01-24  Claudio Saavedra  <csaavedra@igalia.com>

	* gtk/gtktreeview.c: (gtk_tree_view_class_init): Slightly
	improve ::search-column property description.

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.1 ===

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkactivatable.c: Make the section docs produce some valid
	xml.

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkactivatable.c: Fix the section docs so gtk-doc finds them.

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkrecentchooser.c:
	* gtk/gtkuimanager.c: Fix issues found by pltcheck

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Updates

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 560228 – Add "action-controller" property to GtkWidgetClass

	Rework the way actions and proxies interact, to make the
	interaction less ad hoc, more extensible, and better suited
	for support in GUI builders like glade. 

	To be used as a proxy, a widget must now implement the 